Bug 433387 - no tooltip in "save all" option displayed at the top of the modified image
Summary: no tooltip in "save all" option displayed at the top of the modified image
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.12.2
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords: junior-jobs, usability
Depends on:
Blocks:
 
Reported: 2021-02-21 14:42 UTC by Mohammed Sameer
Modified: 2021-05-21 16:43 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mohammed Sameer 2021-02-21 14:42:25 UTC
SUMMARY
When we edit a single image in gwenview the "save all" option displayed does not show tooltip of what it does. This causes confusion that the original image & modified image are saved when we click the button, but only the modified image is saved. 
When we open & edit multiple files the "save all" option saves all the modified images, but the tooltip is not shown.

EXPECTED RESULT
tooltip is shown for the "save all" option of what it does.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2021-05-21 16:43:14 UTC
Git commit 0dc8b2421c614ade1dd201b669837c25c19a2ea2 by Nate Graham, on behalf of Ayushmaan jangid.
Committed on 21/05/2021 at 16:43.
Pushed by ngraham into branch 'master'.

Add tooltip for "save all" button after editing image
FIXED-IN: 21.08

M  +1    -0    app/savebar.cpp

https://invent.kde.org/graphics/gwenview/commit/0dc8b2421c614ade1dd201b669837c25c19a2ea2