Add tooltip for "save all" button after editing image

BUG: 433387
FIXED-IN: 21.08